Sat May  5 18:58:13 CEST 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/transform.c tests/XSLTMark/xslbench1.out: Another fix
	  for the CDATA output

Sat May  5 18:09:15 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xslt.c: do not escape content of CDATA nodes on output

Sat May  5 17:52:52 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/internals.html doc/node.fig doc/node.gif doc/processing.fig
	  doc/processing.gif doc/stylesheet.fig doc/stylesheet.gif
	  doc/templates.fig doc/templates.gif: started writing tye doc
	  on how libxslt works.

Sat May  5 17:13:16 CEST 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/numbersInternals.h libxslt/numbers.c
	  tests/numbers/format-number.out tests/XSLTMark/number.out:
	  Patch from William Brack to bring format-number() more in alignment
	  with the Java implementations.

	* libxslt/xslt.c tests/XSLTMark/xslbench1.out: Do not remove CDATA
	  from stylesheet

Fri May  4 20:10:45 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/docbook/result/html/* tests/general/bug-11-.out 
	  tests/multiple/result.xml tests/XSLTMark/*.out 
	  libxslt/transform.c: all the PUBLIC and SYSTEM IDs
	  were swapped

Fri May  4 19:09:45 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltproc.c: add a --docbook option if your libxml2
	  has the SGML DocBook support compiled in.

Fri May  4 17:06:01 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/general/bug-2[0-4].* tests/docs/bug-2[0-4].*: added more
	  tests especially on sorting
	* test/xsltutils.c: oops multiple sorts was actually broken !!!
	  this should fix it

Thu May  3 19:02:21 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* TODO configure.in libxslt.spec.in: getting ready for 0.9.0
	  release
	* doc/html/* doc/xslt.html: updated and regenerated the docs

Thu May  3 17:56:55 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
